--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body{
 .container{
     height: 88px;
     padding: 24px 16px;
-
+    min-width: 320px;
 }
-.hidden--mobile{
+.separator--hidden{
     display: none;
 }
 .header__button{
@@ -117,6 +117,7 @@ body{
 .article{
     display: flex;
     flex-direction: column;
+    padding: 16px;
 }
 .expander{
     display: flex;
@@ -140,8 +141,11 @@ body{
     letter-spacing: -0.2px;
 }
 .about__text{
-    padding: 24px 16px 16px 16px;
+    padding-bottom:  16px;
     margin: 0;
+    min-width: 320px; /* Установите фиксированную ширину блока */
+    max-height: 130px;
+    overflow: hidden;
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.1px;
@@ -149,8 +153,32 @@ body{
     text-decoration-skip-ink: none;
     text-align: start;
 }
-@media (max-width: 768px) {
-    .hidden--mobile{
+.article__imag{
+    max-width: 360px;
+    max-height: 208px;
+}
+.about__hidden{
+    display: none;
+}
+@media (min-width: 768px) {
+
+    .separator--hidden{
         display: flex;
+        padding-left: 4px;
+    }
+    .container{
+        padding:24px;
+    }
+    .logo__img{
+        padding-left: 20px;
+    }
+    .article{
+        flex-direction: row;
+    }
+    .article__imag{
+        max-width: 531px;
+        max-height: 307px;
+        min-width: 360px;
+        min-height: 208px;
     }
 }
