--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ body{
         display: none;
     }
     .container{
-        padding:42px 32px 8px 0px;
+        padding:42px 32px 8px 0;
 
     }
     .section{
