--- a/style.css
+++ b/style.css
@@ -1,79 +1,114 @@
 html {
     box-sizing: border-box;
 }
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
-body{
+
+body {
     padding: 0;
     margin: 0;
     background-color: rgba(248, 248, 248, 1);
     font-family: 'TT Lakes', sans-serif;
 }
-.header__container{
+
+.header__container {
     display: flex;
-    padding: 18px 16px;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(255, 255, 255, 1);
     border-bottom: 1px solid rgba(217, 255, 245, 1);
 }
-.container{
+
+.container {
     height: 88px;
     padding: 24px 16px;
     min-width: 320px;
 }
-.separator--hidden{
-    display: none;
-}
-.header__button{
+
+.header__button {
+    border-radius: 50%;
     border: none;
-    background: none;
     width: 40px;
     height: 40px;
     padding: 0;
-}
-.header__logo{
-    max-height: 51px;
-    margin-right: auto;
-}
-.burger{
-    margin-right: 16px;
-
-}
-.header__button{
     background-color: rgba(255, 62, 121, 1);
-    border-color: rgba(255, 62, 121, 1);
-    border-radius: 50%;
 }
-.status{
+
+.header__logo {
+    display: block;
+    height: 51px;
+    width: 97px;
+    margin-right: auto;
+    background-image: url("images/logo.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.burger {
+    margin-right: 16px;
+    background-image: url("./images/burger.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.status {
     margin-left: 16px;
+    background-image: url("./images/status.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
 }
-.request{
-    margin-left: 20px;
+
+.request {
+    margin-left: 40px;
+    background-image: url("./images/request.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
 }
-.header__separator{
-    max-height: 32px;
+
+.request::before {
+    transform: translateX(-20px);
+    content: "";
+    display: block;
+    width: 2px;
+    height: 32px;
+    background-image: url('images/separator.svg');
+    background-repeat: no-repeat;
 }
-.section-header{
+
+.section-header {
     display: flex;
     justify-content: start;
     align-items: center;
-    transform: translateX(-16px);
 }
-.section-header__image{
-    padding-right: 12px;
-}
-.section-header__title{
+
+.section-header__title {
+    display: flex;
     font-size: 28px;
     line-height: 40px;
     letter-spacing: -0.6000000238418579px;
-    text-align: left;
+    text-align: center;
+    justify-content: center;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
 }
 
-.menu__list{
+.section-header__title::before {
+    content: url("images/section__image.svg");
+    margin-right: 12px;
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.menu {
+    margin-left: 16px;
+    position: relative;
+}
+
+.menu__list {
     display: flex;
     align-items: center;
     list-style: none;
@@ -82,25 +117,37 @@ body{
     scrollbar-width: none;
     -ms-overflow-style: none;
     padding: 0;
-    margin: 0 0 0 16px;
+    margin: 0;
 }
-.slid-menu::-webkit-scrollbar {
-    display: none;
-}
-.menu__link::after {
-    background: linear-gradient(270deg,#f8f8f8 16.836%,transparent);
+
+.menu::after {
+    background: linear-gradient(270deg, #f8f8f8 16.836%, transparent);
     content: "";
     height: 40px;
     position: absolute;
+    top: 0;
     right: 0;
     width: 30px;
-    z-index: 200;
+    z-index: 100;
 }
-.menu__item{
+
+.menu::before {
+    background: linear-gradient(to right, #f8f8f8 16.836%, transparent);
+    content: "";
+    height: 40px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30px;
+    z-index: 100;
+}
+
+.menu__item {
     display: inline-block;
     max-height: 40px;
 }
-.menu__link{
+
+.menu__link {
     color: #7E7E82;
     padding: 6px 15px;
     min-height: 24px;
@@ -114,42 +161,30 @@ body{
     text-decoration: none;
     align-items: center;
 }
-.menu__link--active{
-    border: 2px solid rgba(184, 255, 236, 1);
 
+.menu__link--active {
+    border: 2px solid rgba(184, 255, 236, 1);
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 1);
 }
-.article{
+
+.article {
     display: flex;
     flex-direction: column;
-    padding: 16px;
+    margin: 0 16px;
+    gap: 24px;
 }
-.expander{
+.about {
     display: flex;
-    justify-content: start;
-    align-items: center;
-    padding-left: 16px;
-    padding-bottom: 16px;
-    width: 132px;
-    white-space: nowrap;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
-.expander__link{
-    text-decoration: none;
-    color:  rgba(27, 28, 33, 1);
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    padding-left: 8px;
-    letter-spacing: -0.2px;
-}
-.about__text{
-    padding-bottom:  16px;
+
+.about__text {
     margin: 0;
-    max-height: 130px;
+    padding: 0;
+    max-height: 110px;
     overflow: hidden;
     font-size: 14px;
     line-height: 18px;
@@ -158,35 +193,30 @@ body{
     text-decoration-skip-ink: none;
     text-align: start;
 }
-.image__item{
+
+.image__item {
     width: 100%;
 }
-.about__hidden{
+
+.about__hidden {
     display: none;
 }
-.contacts{
-    display:none;
+
+.contacts {
+    display: none;
 }
-.section-header__menu{
-    display:none;
+
+.section-header__menu {
+    display: none;
     height: 40px;
 }
-.header-menu__image--round{
-    background-color: rgba(255, 62, 121, 1);
-    border: 1px solid rgba(255, 62, 121, 1);
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 8px;
-}
-.header-menu__image{
+
+.header-menu__image {
     width: 20px;
     height: 20px;
 }
-.header-menu__link{
+
+.header-menu__link {
     display: flex;
     text-decoration: none;
     font-size: 16px;
@@ -198,53 +228,106 @@ body{
     font-weight: 500;
     height: 40px;
     align-items: center;
-    margin-left: 32px;
 }
+
+.expander__button {
+    width: 132px;
+    height: 24px;
+    text-align: end;
+    background-image: url("./images/expand.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+}
+
 @media (min-width: 768px) {
 
-    .separator--hidden{
+    .container {
+        padding: 24px;
+    }
+
+    .header__logo {
+        position: relative;
+    }
+
+    .burger {
+        margin-right: 43px;
+
+    }
+
+    .burger::before {
+        transform: translateX(60px);
+        content: "";
+        display: block;
+        width: 2px;
+        height: 32px;
+        background-image: url('images/separator.svg');
+        background-repeat: no-repeat;
+
+    }
+
+    .header__contacts {
         display: flex;
-        padding-left: 4px;
+        gap: 16px;
     }
 
-    .container{
-        padding:24px;
+    .section-header__title::before {
+        margin-right: 20px;
     }
-    .logo__img{
-        padding-left: 20px;
-    }
-    .header__contacts{
-        display:flex;
 
+    .menu {
+        margin-left: 24px;
     }
-    .article{
+
+    .article {
         display: flex;
         flex-direction: row;
         align-items: stretch;
         justify-content: space-between;
-        padding: 32px 24px;
+        margin: 0 24px;
+        gap: 48px;
     }
-    .section-header__image{
-        transform: translateX(-8px);
-    }
-    .about{
+
+
+    .about {
+        gap: 10px;
         width: 50%;
         height: 100%;
-        padding-right: 48px;
     }
-    .article__image{
+
+
+    .article__image {
         width: 50%;
     }
-    .profile{
-        margin-right: 20px;
+    .content{
+        gap: 32px;
     }
-    .chat{
-        margin-right: 16px;
+
+    .profile {
+        background-image: url("/images/profile.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
     }
-    .phone{
-        margin-right: 16px;
+
+    .chat {
+        background-image: url("/images/chat.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
     }
-    .about__text{
+
+    .phone {
+        background-image: url("/images/phone.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    .about__text {
         max-height: 160px;
         font-size: 14px;
         line-height: 20px;
@@ -252,50 +335,51 @@ body{
         text-align: left;
         text-underline-position: from-font;
         text-decoration-skip-ink: none;
+    }
 
-    }
-    .expander{
-        padding-top: 10px;
-    }
 }
 
 @media (min-width: 1120px) {
-    .header__container{
+    .header__container {
         display: none;
     }
-    .container{
-        padding:42px 32px 8px 0;
+
+    .container {
+        padding: 42px 32px 8px 0;
 
     }
-    .section{
+
+    .section {
         display: flex;
-       height: 180px;
+        height: 180px;
         flex-direction: column;
     }
-    .section-header__menu{
+
+    .section-header__menu {
         display: flex;
         margin-left: auto;
+        gap: 32px;
     }
-    .content{
+
+    .content {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         max-width: 1110px;
         margin: 0 auto;
+        gap: 7px;
     }
-    .menu__list{
-        display: inline-block;
-        align-items: center;
-        list-style: none;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        scrollbar-width: none;
-        -ms-overflow-style: none;
-        padding: 0;
-        margin: 0 0 0 16px;
+
+    .menu {
+        margin-left: 24px;
     }
-    .about__text{
+
+    .menu__list {
+        flex-wrap: wrap;
+    }
+
+    .about__text {
         max-height: 160px;
         font-size: 14px;
         line-height: 20px;
@@ -303,27 +387,47 @@ body{
         text-align: left;
         text-underline-position: from-font;
         text-decoration-skip-ink: none;
-
     }
-    .section-header__image{
-        display: none;
 
-    }
     .section-header {
         transform: translateX(-5px);
     }
-    .expander{
-        padding-top: 14px;
-    }
-    .article{
+
+    .article {
         max-height: 307px;
-        padding-top: 0;
+
     }
-    .section-header__title{
-     display: flex;
-    }
-    .section-header__title::before{
+
+    .section-header__title::before {
         content: url(images/highlight.svg);
         margin-right: 32px;
+    }
+
+    .submit-button::after {
+        content: "";
+        background-color: rgba(255, 62, 121, 1);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        background-image: url("images/request.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
+        margin-left: 8px;
+    }
+
+    .repair-status::after {
+        margin-left: 9px;
+        content: "";
+        background-color: rgba(255, 62, 121, 1);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        background-image: url("images/status.svg");
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+
+    .menu::before {
+        display: none;
     }
 }
